Added header menu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,11 @@
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
+        <li><a href="/news" class="nav-link px-2 link-secondary"><%= t('header.menu.news') %></a></li>
+        <li><a href="/study" class="nav-link px-2 link-dark"><%= t('header.menu.study') %></a></li>
+        <li><a href="/advise" class="nav-link px-2 link-dark"><%= t('header.menu.advise') %></a></li>
+        <li><a href="/other" class="nav-link px-2 link-dark"><%= t('header.menu.other') %></a></li>
+        <li><a href="/about" class="nav-link px-2 link-dark"><%= t('header.menu.about') %></a></li>
       </div>
     </div>
   </div>
